[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/howToPlay/howToPlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/label_large.tres" type="DynamicFont" id=2]

[node name="howToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "How To Play"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -60.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 200, 0 )

[node name="playBtn" type="Button" parent="MarginContainer"]
margin_right = 200.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -70.0
margin_right = 220.0
margin_bottom = -20.0
rect_min_size = Vector2( 200, 0 )

[node name="backBtn" type="Button" parent="MarginContainer2"]
margin_right = 200.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
[connection signal="pressed" from="MarginContainer/playBtn" to="." method="_on_playBtn_pressed"]
[connection signal="pressed" from="MarginContainer2/backBtn" to="." method="_on_backBtn_pressed"]
